ecmascript/parser/tests/test262-error-references/fail/0889113e04d3203f.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/0889113e04d3203f.js:1:6
  |
1 | class
  |      ^

